2017-10-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (InitializeModuleSearchPath): Verify that any
	component paths specified in MAGICK_CODER_MODULE_PATH and
	MAGICK_FILTER_MODULE_PATH exist before adding them to search paths
	actually used, and convert to real paths if possible.  This avoids
	possible use of relative paths to load modules (a possible
	security issue) and may improve efficiency by removing
	non-existent paths.

	* coders/yuv.c (ReadYUVImage): Fix leak of scanline upon Image
	allocation failure.  Patch submitted by Petr Gajdos via email on
	Fri, 6 Oct 2017.

2017-09-13  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Attempt to fix SourceForge Issue #469 "use after
	free in ReadJNGImage".  Note that this change was found to replace
	a use after free with a memory leak so the problem is not solved
	yet.

2017-10-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (DCM_ReadNonNativeImages): Additional fix
	(improvement) for SourceForge issue #512 "NULL Pointer Dereference
	in DICOM Decoder".

2017-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (ReadDCMImage): Fix SourceForge issue #512 "NULL
	Pointer Dereference in DICOM Decoder".

	* coders/pict.c (ReadPICTImage): Fix SourceForge issue #511
	"Memory Allocation error due to malformed image file".

	* coders/pnm.c (WritePNMImage): Fix SourceForge issue #503 "memory
	leak in WritePNMImage".

	* coders/png.c (ReadMNGImage): Fix SourceForge issue #501 "memory
	leak in ReadMNGImage".

	* magick/segment.c (InitializeIntervalTree): Fix SourceForge issue
	#507 "null pointer in segment.c" and issue #508 "null pointer in
	segment.c".

	* coders/topol.c (ReadTOPOLImage): Fix SourceForge issue #510
	"null pointer and meory leak in topol.c".

	* magick/widget.c (MagickXFileBrowserWidget): Fix SourceForge
	issue #506 "null pointer in widget.c".

	* coders/tiff.c (WriteTIFFImage): Fix SourceForge issue #509