@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171007"
-#define public MagickPackageReleaseDate "snapshot-20171007"
+#define public MagickPackageVersionAddendum ".020171008"
+#define public MagickPackageReleaseDate "snapshot-20171008"
